# xtreamium-api

./: .dockerignore  .gitignore  .virtualenv  Dockerfile  README.md  debug.py  docker-compose.yml  logging.conf  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_initial_user.py
.github/: copilot-instructions.md
.github/workflows/: build-docker.yaml
app/: database.py  main.py
app/api/: __init__.py  admin.py  auth.py  epg.py  ping.py  user.py  users.py  utils.py
app/models/: __init__.py  channel.py  epg.py  program.py  programme.py  server.py  user.py
app/schemas/: base.py  server.py  user.py
app/services/: app_factory.py  config.py  db_factory.py  initial_setup.py  logger.py  migration_service.py
app/utils/: XTream.py  cache.py  epg.py  epg_parser.py  iptv_parser_ng.py  time_utils.py  xmltv.py
docker/: Dockerfile
docs/: MIGRATIONS.md
migrations/: 001_migrate_user_id_to_uuid.py  002_create_epg_table.py  003_create_channels_and_programmes_tables.py  env.py  migration_utils.py
migrations/versions/: 1cec460a3478_initial_migration.py
scripts/: build_docker.sh  create_release.sh  migrate.py  release.sh  version_bump.py  watch_build.sh
server/: api.py  config.sample.py  logger.py
server/utils/: cache.py  streamer.py  xtream.py
tests/: conftest.py  factories.py  test_basic.py  test_integration.py  test_working_endpoints.py
tests/test_api/: __init__.py  test_admin.py  test_epg.py  test_ping.py  test_user.py
tests/test_models/: __init__.py  test_channel.py  test_server.py  test_user.py
tests/test_services/: __init__.py  (+3 more)
(+12 files in other folders)
